feature: button 컴포넌트 공통으로 이동 및 scss 설정, 오류 및 vite 설정값 수정

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -35,12 +35,13 @@
     "feather-route-matcher": "4.0.0"
   },
   "peerDependencies": {
-    "@vanilla-extract/css": "^1.9.5",
-    "axios": "^1.4.0",
-    "clsx": "1.2.1",
-    "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "axios": "1",
+    "clsx": "1",
+    "query-string": "8",
+    "react": "18",
+    "react-dom": "18",
+    "classnames": "2",
+    "sass": "1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
