--- a/apps/react-next-coupang/package.json
+++ b/apps/react-next-coupang/package.json
@@ -14,8 +14,6 @@
     "@tosspayments/payment-sdk": "^1.6.1",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
     "firebase": "^9.22.1",
     "next": "13.4.4",
     "notiflix": "^3.2.6",
@@ -27,10 +25,12 @@
     "react-redux": "^8.0.5",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^9.1.3",
-    "sass": "^1.62.1",
-    "typescript": "^5.0.4"
+    "sass": "^1.62.1"
   },
   "devDependencies": {
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
+    "typescript": "^5.0.4",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "encoding": "^0.1.13",
