--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -41,7 +41,9 @@
     "react": "18",
     "react-dom": "18",
     "classnames": "2",
-    "sass": "1"
+    "sass": "1",
+    "next": "13",
+    "react-loader-spinner": "5"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
